# danil-proger

./: README.md
task1/: .run.sh.swp  run.sh
task2/: CMakeLists.txt
task2/A/: preparing.py
task2/B/: CMakeLists.txt  lib.cpp  lib.h
task2/C/: main.cpp  main.h
task3/: CMakeLists.txt
task3/src/: CMakeLists.txt
task4/tests/01-simple-library/: AddTestCase.cpp  AddTestCase.h
task5/cmake-with-flask/: .Dockerfile.swo  .Dockerfile.swp  Dockerfile
